--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <html>
-    Hello World
+    <main>
+
+    </main>
+    <body>
+        <header>
+            <h1>Hello World</h1>
+        </header>
+    </body>
+    
 </html>
