--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
+<!DOCTYPE html>
 <html>
     <main>
 
     </main>
     <body>
-        <h1>title</h1>
         <header>
             <h1>Hello World</h1>
         </header>
