add excursion-project.html page

--- a/excursion-project.html
+++ b/excursion-project.html
@@ -5,8 +5,7 @@
     </main>
     <body>
         <header>
-            <h1>Hello World</h1>
-            <a href="excursion-project.html">Excursion Project</a>
+            <h1>Excursion Project</h1>
         </header>
     </body>
     
