--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <header>
             <h1>Hello World</h1>
-            <a href="excursion-project.html">Excursion Project</a>
+            <a href="./excursion-project/index.html">Excursion Project</a>
         </header>
     </body>
     
