--- a/excursion-project/index.html
+++ b/excursion-project/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <main>
-        <link href="./resources/css/style.css" type="stylesheet"/>
+        <link href="./resources/css/style.css" rel="stylesheet"/>
     </main>
     <body>
         <header>
