add main title and video

--- a/excursion-project/index.html
+++ b/excursion-project/index.html
@@ -2,11 +2,20 @@
 <html>
     <main>
         <link href="./resources/css/style.css" rel="stylesheet"/>
+        <title>Excursion Project</title>
     </main>
     <body>
         <header>
-            <h1>Excursion Project</h1>
+            <h1>Discover hidden places in the world around you</h1>
         </header>
+        <nav>
+            <a href="#">Download Excursion (Coming soon!)</a>
+        </nav>
+        <main>
+            <section>
+                <video src="./resources/media/excursion.mp4" controls></video>
+            </section>
+        </main>
     </body>
     
 </html>
