center video and add h2

--- a/excursion-project/index.html
+++ b/excursion-project/index.html
@@ -13,7 +13,8 @@
         </nav>
         <main>
             <section>
-                <video src="./resources/media/excursion.mp4" controls></video>
+                <video src="./resources/media/excursion.mp4" autoplay></video>
+                <h2>Your personal travel guide</h2>
             </section>
         </main>
     </body>
