fix video configuration

--- a/excursion-project/index.html
+++ b/excursion-project/index.html
@@ -13,7 +13,9 @@
         </nav>
         <main>
             <section>
-                <video src="./resources/media/excursion.mp4" autoplay></video>
+                <video autoplay muted loop>
+                    <source src="./resources/media/excursion.mp4" type="video/mp4">
+                </video>
                 <h2>Your personal travel guide</h2>
             </section>
         </main>
