--- a/excursion-project/index.html
+++ b/excursion-project/index.html
@@ -17,7 +17,13 @@
                     <source src="./resources/media/excursion.mp4" type="video/mp4">
                 </video>
                 <h2>Your personal travel guide</h2>
+                <p>
+                    Excursion remembers places you like, and recommends new points of interest around you.
+                </p>
             </section>
+            <figure>
+                <img src="./resources/media/camp.jpg"/>
+            </figure>
         </main>
     </body>
     
