add phone icon, h2, second link and footer

--- a/excursion-project/index.html
+++ b/excursion-project/index.html
@@ -20,11 +20,17 @@
                 <p>
                     Excursion remembers places you like, and recommends new points of interest around you.
                 </p>
+                <figure>
+                    <img src="./resources/media/camp.jpg"/>
+                    <img src="resources/media/phone.png"/>
+                </figure>
+                <h2>Coming Soon for iPhone and Android</h2>
+                <a href="#">Download Excursion (Coming soon!)</a>
             </section>
-            <figure>
-                <img src="./resources/media/camp.jpg"/>
-            </figure>
         </main>
+        <footer>
+            <p>&copy; Abimael Wilmort</p>
+        </footer>
     </body>
     
 </html>
