--- a/excursion-project/index.html
+++ b/excursion-project/index.html
@@ -25,7 +25,7 @@
                         <img src="./resources/media/camp.jpg"/>
                     </p>
                     <p>
-                        <img src="resources/media/phone.png"/>
+                        <img src="./resources/media/phone.png"/>
                     </p>
                 </figure>
                 <h2>Coming Soon for iPhone and Android</h2>
