--- a/excursion-project/index.html
+++ b/excursion-project/index.html
@@ -33,7 +33,8 @@
             </section>
         </main>
         <footer>
-            <p>&copy; Abimael Wilmort</p>
+            <a href="../index.html">Home</a>
+            <div class="copyright">&copy; Abimael Wilmort</div>
         </footer>
     </body>
     
