--- a/excursion-project/index.html
+++ b/excursion-project/index.html
@@ -33,7 +33,7 @@
             </section>
         </main>
         <footer>
-            <a href="../index.html">Home</a>
+            <a class="homelink" href="../index.html">Home</a>
             <div class="copyright">&copy; Abimael Wilmort</div>
         </footer>
     </body>
