display home link and copyright inline and separate

--- a/excursion-project/index.html
+++ b/excursion-project/index.html
@@ -34,7 +34,7 @@
         </main>
         <footer>
             <a class="homelink" href="../index.html">Home</a>
-            <div class="copyright">&copy; Abimael Wilmort</div>
+            <span class="copyright">&copy; Abimael Wilmort</span>
         </footer>
     </body>
     
